# Zaephus_Game_Engine

./: .gitignore  Boid.cs  BouncyCube.cs  Flock.cs  Game.cs  Program.cs  README.md  Vector2.cs  Vector2Int.cs  Window.cs  Zaephus_Game_Engine.csproj
Core/: Colour.cs  ExtensionMethods.cs  GameObject.cs  Random.cs  Vector2.cs  Vector2Int.cs  Vector4.cs
Core/Components/: Component.cs  Transform.cs
Core/Components/Shapes/: Ellipse.cs  Hexagon.cs  Polygon.cs  Rectangle.cs  Shape.cs
Core/Math/: Vector2.cs  Vector2Int.cs  Vector4.cs
Core/Physics/: BoxCollider.cs  BoxCollider2D.cs  CircleCollider.cs  Collider.cs  CollisionInfo.cs  Rigidbody.cs
Core/Shapes/: Circle.cs  Ellipse.cs  Hexagon.cs  Polygon.cs  Rectangle.cs  Shape.cs
SDL2/: SDL2.cs
Zaephus_Engine/: CMakeLists.txt  Dependencies.props  ShaderCompile.bat  SourceCompile.bat  SourceLink.bat  Zaephus_Engine.sln  Zaephus_Engine.vcxproj  Zaephus_Engine.vcxproj.filters  compile.bat  main.cpp
Zaephus_Engine/Core/: Buffer.cpp  Buffer.h  Device.cpp  Device.h  Mesh.h  MeshRenderer.h  RenderDebug.cpp  RenderDebug.h  RenderInstance.cpp  RenderInstance.h  Shader.h  Structs.h  Window.cpp  Window.h
Zaephus_Engine/Core/Graphics/: Mesh.cpp  Mesh.h  Vertex.h
Zaephus_Engine/Core/Math/: Math.h
Zaephus_Engine/Core/Math/Vectors/: Vector2.h  Vector2Int.h  Vector3.h  Vector4.h
Zaephus_Engine/Shaders/: shader.frag  shader.vert
Zaephus_Engine/x64/Debug/: Zaephus_Engine.exe.recipe  Zaephus_Engine.ilk  Zaephus_Engine.vcxproj.FileListAbsolute.txt  vc143.idb
Zaephus_Engine/x64/Debug/Zaephus_Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Zaephus_Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
